--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Maxwell-Wang.html" data-home-page-title="Maxwell Wang" class="u-body"><header class="u-clearfix u-header u-header" id="sec-c15c"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body data-home-page="Maxwell-Wang.html" data-home-page-title="Maxwell Wang" class="u-body"><header class="u-clearfix u-grey-80 u-header u-header" id="sec-c15c"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <nav class="u-align-left u-menu u-menu-dropdown u-nav-spacing-25 u-offcanvas u-offcanvas-shift u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse">
             <a class="u-button-style u-nav-link" href="#" style="font-size: calc(1em + 8px);">
@@ -54,7 +54,7 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-17b4">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div alt="" class="u-align-left u-image u-image-circle u-image-1" src="" data-image-width="3026" data-image-height="3026"></div>
         <h1 class="u-heading-font u-text u-title u-text-1">Maxwell Wang</h1>
         <p class="u-large-text u-text u-text-variant u-text-2">Welcome to my website! I'm a Rutgers Honors College sophomore majoring in CS. I'm also an undergraduate research assistant studying neural networks at Aresty Research center.<br>
@@ -90,7 +90,7 @@
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-white u-footer" id="sec-4c1a"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-4c1a"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Updated Dec 2020</p>
       </div></footer>
   </body>
